2002-12-18  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in: Completely rewritten and simplified checks for png,
	gd, and the required support libraries. Other minor cleanups.

	* config/config.amg, config/makefile.cyg, config/makefile.mgw,
	config/makefile.os2, src/show.c, src/term.h, term/gd.trm, term/png.trm:
	Update all preprocessor symbols related to new gd/png/jpeg checks.

2002-12-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Initialize gcCurrentFunction because gcc is too
	stupid to see that it can never be used before it is set.

	* src/misc.c: Do not allow input of negative pointsize or linewidth.

	* term/gd.trm: Check for valid linetype (Mike Kay <kay@fsl.noaa.gov>).

2002-12-17  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: Fix typo in allterm.h generation.

2002-12-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/save.c: Fix saving of 'set xtics 7'.  Patch from
 	Pieter-Tjerk de Boer <ptdeboer@cs.utwente.nl>.

	* src/fit.c (fit_command): Replace EOF by DF_EOF in return value
 	check of df_readline call.

2002-12-17  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: Adjust DEFAULT_INCLUDES and INCLUDES. Remove
	jpeg.trm from CORETERM. New generated file term.h, used instead of
	../src/term.h, and adjust dependencies accordingly. Better rule to
	generated allterm.h.

	* term/epslatex.trm: Fix typos in help section (was labeled as post
	instead of epslatex).

	* term/pdf.trm, term/svg.trm: Fix indentation of term help section.

	* term/png.trm: Rename "png (OLD)" to "png_old" to allow for
	alphabetical sorting of term help entries.

	* term/vgagl.trm: Remove spaces-only line from end of term help.

2002-12-13  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: Add DEFAULT_INCLUDES. Update CORETERM. Add
	gnuplot.out to CLEANFILES. Prepend config.h to allterm.c

	* docs/checkdoc.c, docs/doc2gih.c, docs/doc2hlp.c, docs/doc2ipf.c,